<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#454545"
    tools:context=".ShowResults">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CACACA"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:subtitleTextColor="#CACACA"
        app:titleMarginStart="50dp"
        app:titleTextColor="#454545" />
    <!-- Card view for displaying the -->
    <!-- Pie chart and details of pie chart -->
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:background="#CACACA"
        android:contentDescription="@string/back"
        android:hapticFeedbackEnabled="false"
        app:srcCompat="?attr/actionModeCloseDrawable" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_below="@+id/toolbar3"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        android:id="@+id/details">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/total_sleep_time"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:id="@+id/totalSleepTime"
                    android:textAlignment="textEnd"
                    android:textSize="18sp"
                    android:textColor="#fb7268"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <!--View to display the line-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E3E0E0"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"/>

            <!--View to display the line-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/light_sleep_time"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lightSleepTime"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/_0"
                    android:textAlignment="textEnd"
                    android:textColor="#fb7268"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#E3E0E0" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/deep_sleep_time"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:id="@+id/deepSleepTime"
                    android:textAlignment="textEnd"
                    android:textSize="18sp"
                    android:textColor="#fb7268"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E3E0E0"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/rem_sleep_time"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/REMSleepTime"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/_0"
                    android:textAlignment="textEnd"
                    android:textColor="#fb7268"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#E3E0E0" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/total_wake_time"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:id="@+id/totalWakeTime"
                    android:textAlignment="textEnd"
                    android:textSize="18sp"
                    android:textColor="#fb7268"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_below="@+id/details"
        android:id="@+id/cardViewGraph"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp">


        <!--Linear layout to display pie chart -->
        <!-- and details of pie chart-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <!--Pie chart to display the data-->

            <org.eazegraph.lib.charts.PieChart
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/pieChart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"

                android:padding="6dp" />

            <!--Creating another linear layout -->
            <!-- to display pie chart details -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical">

                    <View
                        android:layout_width="15dp"
                        android:layout_height="match_parent"
                        android:background="#FFA726" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:text="@string/light_sleep" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp">

                    <View
                        android:layout_width="15dp"
                        android:layout_height="match_parent"
                        android:background="#EF5350" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/deep_sleep"
                        android:paddingStart="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp">

                    <View
                        android:layout_width="15dp"
                        android:layout_height="match_parent"
                        android:background="#29B6F6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/rem" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>

    <!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:background="#454545"-->
<!--    android:hapticFeedbackEnabled="false"-->
<!--    tools:context=".ShowResults">-->

<!--    -->

<!--    <androidx.appcompat.widget.Toolbar-->
<!--        android:id="@+id/toolbar3"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="#CACACA"-->
<!--        android:minHeight="?attr/actionBarSize"-->
<!--        android:theme="?attr/actionBarTheme"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:subtitleTextColor="#CACACA"-->
<!--        app:titleMarginStart="50dp"-->
<!--        app:titleTextColor="#454545" />-->

<!--    <ImageButton-->
<!--        android:id="@+id/backButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="15dp"-->
<!--        android:layout_marginLeft="15dp"-->
<!--        android:background="#CACACA"-->
<!--        android:contentDescription="@string/back"-->
<!--        android:hapticFeedbackEnabled="false"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/toolbar3"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:srcCompat="?attr/actionModeCloseDrawable" />-->

<!--    <TextView-->
<!--        android:id="@+id/totalSleepTIme"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="40dp"-->
<!--        android:layout_marginLeft="40dp"-->
<!--        android:layout_marginTop="100dp"-->
<!--        android:layout_marginEnd="40dp"-->
<!--        android:layout_marginRight="40dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:text="Total Sleep Time: "-->
<!--        android:textColor="#FFFFFF"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/deepSleepTime"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/toolbar3" />-->

<!--    <TextView-->
<!--        android:id="@+id/deepSleepTime"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="40dp"-->
<!--        android:layout_marginLeft="40dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginEnd="40dp"-->
<!--        android:layout_marginRight="40dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:text="Deep Sleep Time:"-->
<!--        android:textColor="#FFFFFF"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/lightSleepTime"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/totalSleepTIme" />-->

<!--    <TextView-->
<!--        android:id="@+id/lightSleepTime"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="40dp"-->
<!--        android:layout_marginLeft="40dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginEnd="40dp"-->
<!--        android:layout_marginRight="40dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:text="Light Sleep Time:"-->
<!--        android:textColor="#FFFFFF"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/REMSleepTime"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/deepSleepTime" />-->

<!--    <TextView-->
<!--        android:id="@+id/REMSleepTime"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="40dp"-->
<!--        android:layout_marginLeft="40dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginEnd="40dp"-->
<!--        android:layout_marginRight="40dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:text="REM Sleep Time: "-->
<!--        android:textColor="#FFFFFF"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/totalWakeTIme"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/lightSleepTime" />-->
<!--    -->
<!--    <TextView-->
<!--        android:id="@+id/totalWakeTIme"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="40dp"-->
<!--        android:layout_marginLeft="40dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginEnd="40dp"-->
<!--        android:layout_marginRight="40dp"-->
<!--        android:layout_marginBottom="400dp"-->
<!--        android:text="Total Wake Time: "-->
<!--        android:textColor="#FFFFFF"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/REMSleepTime" />-->
<!--    -->
<!--</androidx.constraintlayout.widget.ConstraintLayout>-->